feat(Resultado): Criação da tela ResultAloy

--- a/Cadastro/Cadastro.html
+++ b/Cadastro/Cadastro.html
@@ -21,9 +21,15 @@
 
             <a href="../Página inicial/index.html"><img class="logo" src="../NavBar/PS BLOG.png" alt=""></a>
             <ul>
-                <a href=""><p>Sobre nós</p></a>
-                <a href="../Testes/Testes.html"><p>Testes</p></a>
-                <a href=""><p>Outros</p></a>
+                <a href="">
+                    <p>Sobre nós</p>
+                </a>
+                <a href="../Testes/Testes.html">
+                    <p>Testes</p>
+                </a>
+                <a href="">
+                    <p>Outros</p>
+                </a>
                 <p>|</p>
                 <a href="../Login/login.html"><button class="btn_Entrar">Entrar</button></a>
                 <a href="../Cadastro/Cadastro.html"><button class="btn_Registrar">Registrar</button></a>
@@ -32,35 +38,35 @@
         </div>
     </header>
 
-<div id="imagemFundo">
-    <br><br>
-    <div class="div_container3">
-    <div class="div_cadastro">
+    <div id="imagemFundo">
+        <br><br>
+        <div class="div_container3">
+            <div class="div_cadastro">
 
-        <h1>Cadastro</h1>
+                <h1>Cadastro</h1>
 
-        <span>Seu E-mail</span>
-        <br>
-        <input id="ipt_email">
+                <span>Seu E-mail</span>
+                <br>
+                <input id="ipt_email">
+                <br><br>
+                <span>Nickname</span>
+                <br>
+                <input id="ipt_nick">
+                <br><br>
+                <span>Sua idade</span>
+                <br>
+                <input id="ipt_nascimento">
+                <br><br>
+                <span>Sua senha</span>
+                <br>
+                <input id="ipt_senha">
+                <br><br><br>
+                <div class="div_botaoCad"> <button onclick="cadastrar()">Cadastrar</button></div>
+                <br><br>
+            </div>
+        </div>
         <br><br>
-        <span>Nickname</span>
-        <br>
-        <input id="ipt_nick">
-        <br><br>
-        <span>Data de nascimento</span>
-        <br>
-        <input id="ipt_nascimento">
-        <br><br>
-        <span>Sua senha</span>
-        <br>
-        <input id="ipt_senha">
-        <br><br><br>
-        <div class="div_botaoCad"> <button onclick="cadastrar()">Cadastrar</button></div>
-<br><br>
     </div>
-</div>
-<br><br>
-</div>
 
 
 
