feat(geral) Formatação

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/NavBar.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="/css/NavBar.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
@@ -18,14 +18,15 @@
 
         <div id="container " class="div_container">
 
-            <a href="../Página inicial/index.html"><img class="logo" src="../assets/imagens/PS BLOG.png" alt=""></a>
+            <a href="/index.html"><img class="logo" src="/assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
                 <a href=""><p>Sobre nós</p></a>
-                <a href="../Testes/Testes.html"><p>Testes</p></a>
-                <a href=""><p>Outros</p></a>
+                <a href="/Testes/Testes.html"><p>Testes</p></a>
+                
+                <a href=""><p>Notícias</p></a>
                 <p>|</p>
-                <a href="../Login/login.html"><button class="btn_Entrar">Entrar</button></a>
-                <a href="../cadastro.html"><button class="btn_Registrar">Registrar</button></a>
+                <a href="/login.html"><button class="btn_Entrar">Entrar</button></a>
+                <a href="/cadastro.html"><button class="btn_Registrar">Registrar</button></a>
             </ul>
 
         </div>
@@ -37,7 +38,7 @@
 
         <span>Notícia em destaque</span>
 
-        <img src="../assets/imagens/Img_Página inicial/image.png" alt="">
+        <img src="/assets/imagens/Img_Página inicial/image.png" alt="">
 
         <b>Marvel’s Spider-Man 2: dev quer entregar “o melhor jogo” já feito pelo estúdio</b>
 
@@ -48,11 +49,11 @@
 
         <div class="div_container2">
 
-            <div class="div_card1"><img src="../assets/imagens/Img_Página inicial/Teste1.png" alt=""><a href="../Página inicial/index.html">Qual personagem dos exclusivos PlayStation você é ?</a></div>
+            <div class="div_card1"><img src="/assets/imagens/Img_Página inicial/Teste1.png" alt=""><a href="../login.html">Qual personagem dos exclusivos PlayStation você é ?</a></div>
 
-            <div class="div_card2"><img src="../assets/imagens/Img_Página inicial/Teste2.png" alt="">Que tipo de gamer você é ?</div>
+            <div class="div_card2"><img src="/assets/imagens/Img_Página inicial/Teste2.png" alt="">Que tipo de gamer você é ?</div>
 
-            <div class="div_card3"><img src="../assets/imagens/Img_Página inicial/Teste3.png" alt="">O quanto você sabe sobre o de God of War ?</div>
+            <div class="div_card3"><img src="/assets/imagens/Img_Página inicial/Teste3.png" alt="">O quanto você sabe sobre o de God of War ?</div>
 
         </div>
     </div>
