--- a/site/public/Testes/Testes.html
+++ b/site/public/Testes/Testes.html
@@ -28,10 +28,10 @@
                     <p>Testes</p>
                 </a>
                 <a href="">
-                    <p>Outros</p>
+                    <p>Notícias</p>
                 </a>
                 <p>|</p>
-                <a href=""><button class="btn_Entrar">Entrar</button></a>
+                <a href="../login.html"><button class="btn_Entrar">Entrar</button></a>
                 <a href="../Cadastro.html"><button class="btn_Registrar">Registrar</button></a>
             </ul>
 
