--- a/site/public/Testes/Testes.html
+++ b/site/public/Testes/Testes.html
@@ -50,6 +50,7 @@
                 <br>
                 <a href="../TestePersonalidade/Teste_Personalidade.html"><span>Qual personagem dos exclusivos
                         PlayStation você é ?</span></a>
+<br>
 
             </div>
         </div>
@@ -57,6 +58,8 @@
         <div class="div_linha"></div>
 
         <div class="div_direita">
+
+            <div class="div_junto">
 
             <h1>Outros quizzes</h1>
             <img src="../assets/imagens/img_Testes/TesteAloy.jpg" alt="">
@@ -69,7 +72,7 @@
             <a href="https://pt.quizur.com/trivia/quanto-voce-conhece-days-gone-spoiler-KElv">O quanto voce sabe sobre
                 Days Gone?</a>
             <br>
-
+        </div>
         </div>
 
     </div>
