feat(geral) Adição de mais telas Log, criação da tela noticias

--- a/site/public/Site_Log/index.html
+++ b/site/public/Site_Log/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/NavBarLog.css">
     <link rel="stylesheet" href="../css/index.css">
 
@@ -16,12 +20,12 @@
 
         <div id="container " class="div_container">
 
-            <a href=""><img class="logo" src="../assets/imagens/PS BLOG.png" alt=""></a>
+            <a href="/site_Log/"><img class="logo" src="../assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
                 <a href="">
                     <p>Sobre nós</p>
                 </a>
-                <a href="">
+                <a href="Testes.html">
                     <p>Testes</p>
                 </a>
 
@@ -44,7 +48,7 @@
 
         <img src="/assets/imagens/Img_Página inicial/image.png" alt="">
 
-        <b>Marvel’s Spider-Man 2: dev quer entregar “o melhor jogo” já feito pelo estúdio</b>
+        <b><a href="https://meups.com.br/noticias/marvels-spider-man-2-o-melhor-da-insomniac/#:~:text=A%20Insomniac%20Games%20continua%20trabalhando,jogo%20j%C3%A1%20feito%E2%80%9D%20pela%20desenvolvedora.">Marvel’s Spider-Man 2: dev quer entregar “o melhor jogo” já feito pelo estúdio</a></b>
 
 <!-- Fim Notícia em destaque  -->
 
@@ -56,9 +60,9 @@
 
             <div class="div_card1"><img src="/assets/imagens/Img_Página inicial/Teste1.png" alt=""><a href="../TestePersonalidade/Teste_Personalidade.html">Qual personagem dos exclusivos PlayStation você é ?</a></div>
 
-            <div class="div_card2"><img src="/assets/imagens/Img_Página inicial/Teste2.png" alt="">Que tipo de gamer você é ?</div>
+            <div class="div_card2"><img src="/assets/imagens/Img_Página inicial/Teste2.png" alt=""><a href="https://www.legiaodosherois.com.br/quiz/tipo-de-gamer.html"> Que tipo de gamer você é ?</a></div>
 
-            <div class="div_card3"><img src="/assets/imagens/Img_Página inicial/Teste3.png" alt="">O quanto você sabe sobre o de God of War ?</div>
+            <div class="div_card3"><img src="/assets/imagens/Img_Página inicial/Teste3.png" alt=""><a href="https://pt.quizur.com/trivia/o-quanto-vc-sabe-sobre-god-of-war-TScW"> O quanto você sabe sobre o de God of War ?</a></div>
 
         </div>
     </div>
