--- a/site/public/index.html
+++ b/site/public/index.html
@@ -23,7 +23,7 @@
                 <a href=""><p>Sobre nós</p></a>
                 <a href="/Testes/Testes.html"><p>Testes</p></a>
                 
-                <a href=""><p>Notícias</p></a>
+                <a href="noticias.html"><p>Notícias</p></a>
                 <p>|</p>
                 <a href="/login.html"><button class="btn_Entrar">Entrar</button></a>
                 <a href="/cadastro.html"><button class="btn_Registrar">Registrar</button></a>
