Conteudo nas noticias

--- a/site/public/Site_Log/index.html
+++ b/site/public/Site_Log/index.html
@@ -29,7 +29,7 @@
                     <p>Testes</p>
                 </a>
 
-                <a href="">
+                <a href="../noticias.html">
                     <p>Notícias</p>
                 </a>
                 <p>|</p>
