--- a/site/public/Testes/Testes.html
+++ b/site/public/Testes/Testes.html
@@ -27,7 +27,7 @@
                 <a href="../Testes/Testes.html">
                     <p>Testes</p>
                 </a>
-                <a href="">
+                <a href="../noticias.html">
                     <p>Notícias</p>
                 </a>
                 <p>|</p>
