--- a/site/public/noticias.html
+++ b/site/public/noticias.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/css/noticias.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
 
@@ -15,10 +17,16 @@
 
             <a href="/index.html"><img class="logo" src="/assets/imagens/PS BLOG.png" alt=""></a>
             <ul>
-                <a href=""><p>Sobre nós</p></a>
-                <a href="/Testes/Testes.html"><p>Testes</p></a>
-                
-                <a href="noticias.html"><p>Notícias</p></a>
+                <a href="">
+                    <p>Sobre nós</p>
+                </a>
+                <a href="/Testes/Testes.html">
+                    <p>Testes</p>
+                </a>
+
+                <a href="noticias.html">
+                    <p>Notícias</p>
+                </a>
                 <p>|</p>
                 <a href="/login.html"><button class="btn_Entrar">Entrar</button></a>
                 <a href="/cadastro.html"><button class="btn_Registrar">Registrar</button></a>
@@ -27,31 +35,36 @@
         </div>
     </header>
 
-<div class  ="div_container1">
+    <div class="div_container1">
 
-<h1>Notícias recentes</h1>
+        <div class="div_centralizado">
+        <h1>Notícias recentes</h1>
+        <div class="div_video">
+            <iframe width="713" height="401" src="https://www.youtube.com/embed/KxZ1i-IC4xo"
+                title="Marvel&#39;s Spider-Man 2 - Trailer de Revelação de Gameplay | PS5" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+        </div>
 
-video miranha
-
-<span>Marvel's Spider-Man 2 - Trailer de Revelação de Gameplay | PS5</span>
-
-
-imagem outra noticia
-
-<span></span>
-
+        <span>Marvel's Spider-Man 2 - Trailer de Revelação de Gameplay | PS5</span>
 
 
+        imagem outra noticia
 
-
-
-
-
-
+        <span></span>
 
 </div>
 
 
 
+
+
+
+
+
+    </div>
+
+
+
 </body>
+
 </html>
