--- a/site/public/index.html
+++ b/site/public/index.html
@@ -40,7 +40,7 @@
 
         <img src="/assets/imagens/Img_Página inicial/image.png" alt="">
 
-        <b>Marvel’s Spider-Man 2: dev quer entregar “o melhor jogo” já feito pelo estúdio</b>
+        <b><a href="https://meups.com.br/noticias/marvels-spider-man-2-o-melhor-da-insomniac/#:~:text=A%20Insomniac%20Games%20continua%20trabalhando,jogo%20j%C3%A1%20feito%E2%80%9D%20pela%20desenvolvedora."> Marvel’s Spider-Man 2: dev quer entregar “o melhor jogo” já feito pelo estúdio</a></b>
 
 
         <div class="div_linha"></div>
@@ -49,11 +49,11 @@
 
         <div class="div_container2">
 
-            <div class="div_card1"><img src="/assets/imagens/Img_Página inicial/Teste1.png" alt=""><a href="../login.html">Qual personagem dos exclusivos PlayStation você é ?</a></div>
+            <div class="div_card1"><img src="/assets/imagens/Img_Página inicial/Teste1.png" alt=""><a href="/login.html">Qual personagem dos exclusivos PlayStation você é ?</a></div>
 
-            <div class="div_card2"><img src="/assets/imagens/Img_Página inicial/Teste2.png" alt="">Que tipo de gamer você é ?</div>
+            <div class="div_card2"><img src="/assets/imagens/Img_Página inicial/Teste2.png" alt=""><a href="/login.html">Que tipo de gamer você é ?</a></div>
 
-            <div class="div_card3"><img src="/assets/imagens/Img_Página inicial/Teste3.png" alt="">O quanto você sabe sobre o de God of War ?</div>
+            <div class="div_card3"><img src="/assets/imagens/Img_Página inicial/Teste3.png" alt=""><a href="/login.html">O quanto você sabe sobre o de God of War ?</a></div>
 
         </div>
     </div>
