Modificações relacionadas ao teste de personalidade

--- a/site/public/TestePersonalidade/Teste_Personalidade.html
+++ b/site/public/TestePersonalidade/Teste_Personalidade.html
@@ -26,10 +26,10 @@
   	  		<div id="question-1">
   	  		  <h2>Questão 1</h2>
   	  			<h3>Como você lida com a raiva?</h3>
-  	  			<input id="question-1-answer-a" type="radio" name="favelang" value=1> Eu tendo a ser impulsivo e agressivo quando estou com raiva<br>
-  				  <input id="question-1-answer-b" type="radio" name="favelang" value=2> Eu costumo tentar agir pacificamente, mas se necessário, posso ser bastante combativo<br>
-  				  <input id="question-1-answer-c" type="radio" name="favelang" value=3> Eu tento controlar minha raiva e agir estrategicamente<br>
-  				  <input id="question-1-answer-d" type="radio" name="favelang" value=4> Eu tento ser sensato e lidar de forma lógica e razoável<br>
+  	  			<input id="question-1-answer-a" type="radio" name="favelang" value=3> Eu tento ser sensato e lidar de forma lógica e razoável<br>
+  				  <input id="question-1-answer-b" type="radio" name="favelang" value=2> Eu tento controlar minha raiva e agir estrategicamente<br>
+  				  <input id="question-1-answer-c" type="radio" name="favelang" value=1> Eu costumo tentar agir pacificamente, mas se necessário, posso ser bastante combativo<br>
+  				  <input id="question-1-answer-d" type="radio" name="favelang" value=4> Eu tendo a ser impulsivo e agressivo quando estou com raiva<br>
   				  <div id="submit1" class="button">Proximo</div>
             <div class="clearfix"></div>
   			  </div>
@@ -37,10 +37,10 @@
   			 <div id="question-2">
   				 <h2>Questão 2</h2>
   				 <h3>Como você lida com situações desafiadoras?</h3>
-  	  		 <input id="question-2-answer-a" type="radio" name="favelang" value="1"> Sou bastante determinado e enfrento os desafios diretamente<br>
-  				 <input id="question-2-answer-b" type="radio" name="favelang" value="2"> Tenho força e coragem diante dos desafios<br>
-  				 <input id="question-2-answer-c" type="radio" name="favelang" value="3"> Faço uso da minha inteligência e astúcia para superar os desafios<br>
-  				 <input id="question-2-answer-d" type="radio" name="favelang" value="4"> Eu tento abordar o problema de forma metódica e estratégica, ou seja, penso antes de agir<br>
+  	  		 <input id="question-2-answer-a" type="radio" name="favelang" value="2"> Faço uso da minha inteligência e astúcia para superar os desafios<br>
+  				 <input id="question-2-answer-b" type="radio" name="favelang" value="3"> Eu tento abordar o problema de forma metódica e estratégica, ou seja, penso antes de agir<br>
+  				 <input id="question-2-answer-c" type="radio" name="favelang" value="4"> Sou bastante determinado e enfrento os desafios diretamente<br>
+  				 <input id="question-2-answer-d" type="radio" name="favelang" value="1"> Tenho força e coragem diante dos desafios<br>
   				 <div id="submit2" class="button">Proximo</div>
            <div class="clearfix"></div>
   			 </div>
@@ -48,10 +48,10 @@
   			 <div id="question-3">	
   				 <h2>Questão 3</h2>
   				 <h3>Como você age sob pressão?</h3>
-  	  		 <input id="question-3-answer-a" type="radio" name="favelang" value="1"> Não hesito em usar a violência para alcançar os objetivos<br>
-  				 <input id="question-3-answer-b" type="radio" name="favelang" value="2"> Minha determinação transforma as experiências negativas em força para resolver qualquer situação<br>
-  				 <input id="question-3-answer-c" type="radio" name="favelang" value="3"> Sou muito persistente em alcançar os objetivos<br>
-  				 <input id="question-3-answer-d" type="radio" name="favelang" value="4"> Enfrento os problemas através da razão, sem deixar que os fatores externos comprometam a minha capacidade de julgamento e ação<br>
+  	  		 <input id="question-3-answer-a" type="radio" name="favelang" value="1"> Minha determinação transforma as experiências negativas em força para resolver qualquer situação<br>
+  				 <input id="question-3-answer-b" type="radio" name="favelang" value="4"> Não hesito em usar a violência para alcançar os objetivos<br>
+  				 <input id="question-3-answer-c" type="radio" name="favelang" value="2"> Sou muito persistente em alcançar os objetivos<br>
+  				 <input id="question-3-answer-d" type="radio" name="favelang" value="3"> Enfrento os problemas através da razão, sem deixar que os fatores externos comprometam a minha capacidade de julgamento e ação<br>
   				 <div id="submit3" class="button">Proximo</div>
            <div class="clearfix"></div>
   			 </div>
@@ -59,10 +59,10 @@
          <div id="question-4">
             <h2>Questão 4</h2>
             <h3>Como você lida com a traição?</h3>
-            <input id="question-4-answer-a" type="radio" name="favelang" value="1"> Eu tendo a ser bastante vingativo e impiedoso diante da traição<br>
-            <input id="question-4-answer-b" type="radio" name="favelang" value="2"> Eu tento entender o ponto de vista do outro e resolver com justiça<br>
-            <input id="question-4-answer-c" type="radio" name="favelang" value="3"> Tenho facilidade em perceber o que acontece, e me comporto ágil e eficientemente<br>
-            <input id="question-4-answer-d" type="radio" name="favelang" value="4"> Às vezes sou difícil de enganar, mas tento dominar meus próprios impulsos quando traído<br>
+            <input id="question-4-answer-a" type="radio" name="favelang" value="3"> Às vezes sou difícil de enganar, mas tento dominar meus próprios impulsos quando traído<br>
+            <input id="question-4-answer-b" type="radio" name="favelang" value="2"> Tenho facilidade em perceber o que acontece, e me comporto ágil e eficientemente<br>
+            <input id="question-4-answer-c" type="radio" name="favelang" value="1"> Eu tento entender o ponto de vista do outro e resolver com justiça<br>
+            <input id="question-4-answer-d" type="radio" name="favelang" value="4"> Eu tendo a ser bastante vingativo e impiedoso diante da traição<br>
             <div id="submit4" class="button">Proximo</div>
             <div class="clearfix"></div>
           </div>
@@ -70,10 +70,10 @@
           <div id="question-5">
             <h2>Questão 5</h2>
             <h3>Como você lida com família, amigos e companheiros?</h3>
-            <input id="question-5-answer-a" type="radio" name="favelang" value="1"> É extremamente dedicado a proteger sua família e seus entes queridos, e fará qualquer coisa para mantê-los seguros<br>
-            <input id="question-5-answer-b" type="radio" name="favelang" value="2"> Me preocupo com as vítimas de injustiças e abusos. Estou sempre disposto a ajudar aqueles em necessidade, independentemente das consequências que isso possa ter para eu mesmo<br>
-            <input id="question-5-answer-c" type="radio" name="favelang" value="3"> Sou um protetor nato e leal, muitas vezes coloco minha própria vida em risco para ajudá-los.<br>
-            <input id="question-5-answer-d" type="radio" name="favelang" value="4"> Me preocupo profundamente com a segurança de meu povo e a família, mas também sou capaz de compaixão pelos meus inimigos.<br>
+            <input id="question-5-answer-a" type="radio" name="favelang" value="4"> É extremamente dedicado a proteger sua família e seus entes queridos, e fará qualquer coisa para mantê-los seguros<br>
+            <input id="question-5-answer-b" type="radio" name="favelang" value="1"> Me preocupo com as vítimas de injustiças e abusos. Estou sempre disposto a ajudar aqueles em necessidade, independentemente das consequências que isso possa ter para eu mesmo<br>
+            <input id="question-5-answer-c" type="radio" name="favelang" value="2"> Sou um protetor nato e leal, muitas vezes coloco minha própria vida em risco para ajudá-los.<br>
+            <input id="question-5-answer-d" type="radio" name="favelang" value="3"> Me preocupo profundamente com a segurança de meu povo e a família, mas também sou capaz de compaixão pelos meus inimigos.<br>
             <div id="submit5" class="button">Proximo</div>
             <div class="clearfix"></div>
           </div>
