Inicio da conexão com o dash

--- a/site/public/Site_Log/Testes.html
+++ b/site/public/Site_Log/Testes.html
@@ -68,7 +68,7 @@
             <a href="https://pt.quizur.com/trivia/voce-conhece-horizon-forbidden-west-MXs6">O quanto voce sabe sobre
                 horizon forbidden west?</a>
             <br>
-            <img src="../assets/imagens/Img_Página inicial/Teste1.png" alt="">
+            <img src="../assets/imagens/Imagens_Result/FimDeacon.jpg" alt="">
             <br>
             <a href="https://pt.quizur.com/trivia/quanto-voce-conhece-days-gone-spoiler-KElv">O quanto voce sabe sobre
                 Days Gone?</a>
