Atualizando script do grafico

--- a/site/public/Resultados/ResultKratos.html
+++ b/site/public/Resultados/ResultKratos.html
@@ -42,3 +42,14 @@
 </body>
 
 </html>
+<script>
+
+function Resumo() {
+
+    window.location.href = "../Site_Log/dashboard.html"
+
+}
+
+
+
+</script>
