inicio da conexão do telefone com banco de dados

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -150,7 +150,7 @@
 
 
                 setTimeout(() => {
-                    window.location = "telefone.html";
+                    window.location = "login.html";
                 }, "2000")
 
                 limparFormulario();
