--- a/site/public/login.html
+++ b/site/public/login.html
@@ -106,7 +106,7 @@
                     sessionStorage.ID_USUARIO = json.id;
 
                     setTimeout(function () {
-                        window.location = '/site_Log/';
+                        window.location = '/telefone.html';
                     }, 1000); // apenas para exibir o loading
 
                 });
