Atualizações no CSS

--- a/site/public/Resultados/ResultJim.html
+++ b/site/public/Resultados/ResultJim.html
@@ -21,12 +21,7 @@
             <div class="div_result">
                 <div class="div_texto">
                     <h1>Jim Sakai</h1>
-                    <span>Lorem ipsum dolor sit amet. Ea adipisci aperiam ad eveniet provident qui exercitationem
-                        voluptatibus. Et facilis dolores ad mollitia quisquam
-                        cum deleniti dolor. nihil doloremque nam autem perferendis vel repudiandae quae aut commodi quia
-                        ea quibusdam recusandae hic neque tenetur.
-                        Aut quidem eius et architecto nostrum sed consequatur iure et velit perspiciatis. Eum ratione
-                        porro ad dolor voluptas sit minima modi est!</span><br>
+                    <span>RACIONAL: cujo pensamento é aquele baseado em método, em uma reflexão antes de agir diante de qualquer situação.</span><br>
                         <button onclick="Resumo()">Ir para o resumo</button>
                 </div>
                 <div class="img_Jim">
