--- a/site/public/Testes/Testes.html
+++ b/site/public/Testes/Testes.html
@@ -48,7 +48,7 @@
                 <h1>Em alta 🔥🔥🔥</h1>
                 <img src="../assets/imagens/Img_Página inicial/Teste1.png" alt="">
                 <br>
-                <a href="../TestePersonalidade/Teste_Personalidade.html"><span>Qual personagem dos exclusivos
+                <a href="../login.html"><span>Qual personagem dos exclusivos
                         PlayStation você é ?</span></a>
 <br>
 
@@ -64,12 +64,12 @@
             <h1>Outros quizzes</h1>
             <img src="../assets/imagens/img_Testes/TesteAloy.jpg" alt="">
             <br>
-            <a href="https://pt.quizur.com/trivia/voce-conhece-horizon-forbidden-west-MXs6">O quanto voce sabe sobre
+            <a href="../login.html">O quanto voce sabe sobre
                 horizon forbidden west?</a>
             <br>
             <img src="../assets/imagens/Imagens_Result/FimDeacon.jpg" alt="">
             <br>
-            <a href="https://pt.quizur.com/trivia/quanto-voce-conhece-days-gone-spoiler-KElv">O quanto voce sabe sobre
+            <a href="../login.html">O quanto voce sabe sobre
                 Days Gone?</a>
             <br>
         </div>
