--- a/site/public/Resultados/ResultKratos.html
+++ b/site/public/Resultados/ResultKratos.html
@@ -21,12 +21,7 @@
             <div class="div_result">
                 <div class="div_texto">
                     <h1>Kratos</h1>
-                    <span>Lorem ipsum dolor sit amet. Ea adipisci aperiam ad eveniet provident qui exercitationem
-                        voluptatibus. Et facilis dolores ad mollitia quisquam
-                        cum deleniti dolor. nihil doloremque nam autem perferendis vel repudiandae quae aut commodi quia
-                        ea quibusdam recusandae hic neque tenetur.
-                        Aut quidem eius et architecto nostrum sed consequatur iure et velit perspiciatis. Eum ratione
-                        porro ad dolor voluptas sit minima modi est!</span><br>
+                    <span>IMPLACÁVEL: É movido por uma raiva profunda e inabalável, e que não é capaz de perdoar</span><br>
                         <button onclick="Resumo()">Ir para o resumo</button>
                 </div>
                 <div class="img_Kratos">
