Conclusão da conexão com o banco de dados

--- a/site/public/Resultados/ResultAloy.html
+++ b/site/public/Resultados/ResultAloy.html
@@ -21,8 +21,9 @@
             <div class="div_result">
                 <div class="div_texto">
                     <h1>Aloy</h1>
-                    <span>EMPÁTICA: Que se coloca no lugar do outro, buscando agir ou pensar como ele pensaria ou agiria nas mesmas situações.</span><br>
-                        <button onclick="Resumo()">Ir para o resumo</button>
+                    <span>EMPÁTICA: Que se coloca no lugar do outro, buscando agir ou pensar como ele pensaria ou agiria
+                        nas mesmas situações.</span><br>
+                    <button onclick="Resumo()">Ir para o resumo</button>
                 </div>
                 <div class="img_Aloy">
                     <img src="../assets/imagens/Imagens_Result/imgAloy.png">
@@ -30,6 +31,7 @@
             </div>
         </div>
         <br><br><br><br><br><br><br><br><br><br><br>
+
     </div>
 
 
@@ -37,3 +39,13 @@
 </body>
 
 </html>
+
+<script>
+
+    function Resumo() {
+
+        window.location.href = "../Site_Log/dashboard.html"
+
+    }
+
+</script>
