--- a/site/public/Resultados/ResultDeacon.html
+++ b/site/public/Resultados/ResultDeacon.html
@@ -37,3 +37,12 @@
 </body>
 
 </html>
+<script>
+
+    function Resumo() {
+
+        window.location.href = "../Site_Log/dashboard.html"
+
+    }
+
+</script>
