--- a/site/public/telefone.html
+++ b/site/public/telefone.html
@@ -114,7 +114,7 @@ fetch(`/telefone/cadastrar/${fkUsuario}/${telefoneFinal}`, {
 
 
         console.log("Cadastro realizado com sucesso! Redirecionando para tela de Login...");
-        window.location = "Site_Log/.html"
+        window.location = "../Site_Log/"
 
     }
 
